// centrifugo__centrifugo_testing/messages.proto
// Generated by django-cfg django_client module
// DO NOT EDIT - This file is auto-generated

syntax = "proto3";

package cfg.v1.centrifugo_testing;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";


message Connectiontokenrequestrequest {

  string user_id = 1;
  repeated string channels = 2;
}

message Connectiontokenresponse {

  string token = 1;
  string centrifugo_url = 2;
  string expires_at = 3;
}

message Data {
}

message Publishtestrequestrequest {

  message Data {
  }

  string channel = 1;
  Data data = 2;
  optional bool wait_for_ack = 3;
  optional int64 ack_timeout = 4;
}

message Publishtestresponse {

  bool success = 1;
  string message_id = 2;
  string channel = 3;
  optional int64 acks_received = 4;
  optional bool delivered = 5;
  optional string error = 6;
}

message Manualackrequestrequest {

  string message_id = 1;
  string client_id = 2;
}

message Manualackresponse {

  bool success = 1;
  string message_id = 2;
  optional string error = 3;
}